--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -32,6 +32,11 @@ jobs:
           sudo apt-get install -y python3-pip
           pip3 install --upgrade boto3 botocore
 
+      - name: Zip Lambda Python code
+        run: |
+          cd src/ec2_tag_stopper
+          zip -r ../ec2_tag_stopper.zip lambda.py
+
       - name: Deploy Terraform configuration
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -39,4 +44,4 @@ jobs:
           AWS_REGION: eu-west-2
         working-directory: ./src/terraform
         run: |
-          pwd && ls -l && terraform init && terraform apply -auto-approve
+          terraform init && terraform apply -auto-approve
