Refactor EC2 tag stopper Lambda function: replace lambda.py with ec2_handler.py, update handler reference in Terraform, and add comprehensive tests

--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Zip Lambda Python code
         run: |
           cd src/ec2_tag_stopper
-          zip -r ../ec2_tag_stopper.zip lambda.py
+          zip -r ../ec2_tag_stopper.zip ec2_handler.py
 
       - name: Deploy Terraform configuration
         env:
